<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/accesss_header">

        <SwitchPreferenceCompat
                app:key="gps"
                app:title="@string/gpsAllowance" />

        <SwitchPreferenceCompat
                app:key="cameraroll"
                app:title="@string/cameraAllowance" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="only_wi-fi_sync"
                app:title="@string/sync_title" />

        <!--<SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync" />-->

    </PreferenceCategory>

</PreferenceScreen>